# Estudo.FastAPI

./: pyproject.toml
